[package]
name = "arios"
version = "0.2.0"
edition = "2024"
description = "A small HTTP client crate built as a learning project"
repository = "https://github.com/gustavohnsv/arios"
homepage = "https://github.com/gustavohnsv/arios"
readme = "README.md"
license = "MIT"
keywords = ["http", "client"]
categories = ["network-programming"]

[dependencies]
rustls = "0.23.37"
rustls-native-certs = "0.8.3"
